--- a/src/app/pages/media/media.component.scss
+++ b/src/app/pages/media/media.component.scss
@@ -69,6 +69,11 @@
     color: var(--mat-warn-color);
     margin-bottom: 16px;
   }
+
+  .error-actions {
+    display: flex;
+    gap: 8px;
+  }
 }
 
 .selection-actions {
