feat(terms): update terms of use dialog for clarity and consent requirements

--- a/src/app/components/terms-of-use-dialog/terms-of-use-dialog.component.html
+++ b/src/app/components/terms-of-use-dialog/terms-of-use-dialog.component.html
@@ -2,8 +2,11 @@
     <h2 mat-dialog-title>Terms of Use</h2>
 
     <mat-dialog-content class="terms-content">
-        <h3>Consent</h3>
+        <h3>Privacy Policy / Terms & Conditions</h3>
+        <p>To continue you must agree with our <a href="https://www.blockcore.net/privacy/" target="_blank" rel="noopener noreferrer">Privacy Policy</a> and <a href="https://www.blockcore.net/terms/" target="_blank" rel="noopener noreferrer">Terms & Conditions.</a></p>
 
+        <h3>Consent</h3>
+ 
         <p>
             Nostr is a decentralized and distributed network of relays that relays data by users. That means there is no
             centralized service where filtering or censoring is occurring. You may be exposed to content that will be
@@ -57,9 +60,6 @@
 
         <h3>9. Termination</h3>
         <p>We reserve the right to terminate or suspend your access to the App at our discretion, without notice.</p>
-
-        <h3>10. Privacy Policy / Terms & Conditions</h3>
-        <p>To continue you must agree with our <a href="https://www.blockcore.net/privacy/" target="_blank" rel="noopener noreferrer">Privacy Policy</a> and <a href="https://www.blockcore.net/terms/" target="_blank" rel="noopener noreferrer">Terms & Conditions.</a></p>
 
     </mat-dialog-content>
 
