--- a/src/app/pages/media/media-details/media-details.component.scss
+++ b/src/app/pages/media/media-details/media-details.component.scss
@@ -96,6 +96,30 @@
   }
 }
 
+.text-preview {
+  width: 100%;
+  max-height: 400px;
+  overflow: auto;
+  // background-color: #f5f5f5;
+  color: black;
+  padding: 1rem;
+  border-radius: 4px;
+  white-space: pre;
+  overflow-x: auto;
+  font-family: monospace;
+  font-size: 14px;
+}
+
+.text-loading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  width: 100%;
+  gap: 1rem;
+}
+
 .media-actions {
   display: flex;
   justify-content: space-around;
