--- a/src/app/pages/media/media-server-dialog/media-server-dialog.component.html
+++ b/src/app/pages/media/media-server-dialog/media-server-dialog.component.html
@@ -5,12 +5,12 @@
     <mat-form-field appearance="outline" class="full-width">
       <mat-label>Server URL</mat-label>
       <input matInput formControlName="url" placeholder="https://example.com/">
-      <mat-hint>Must be a valid URL with HTTPS</mat-hint>
+      <mat-hint>HTTPS is recommended for security</mat-hint>
       @if (serverForm.get('url')?.hasError('required') && serverForm.get('url')?.touched) {
         <mat-error>Server URL is required</mat-error>
       }
       @if (serverForm.get('url')?.hasError('pattern') && serverForm.get('url')?.touched) {
-        <mat-error>Server URL must start with https://</mat-error>
+        <mat-error>Server URL must start with http:// or https://</mat-error>
       }
     </mat-form-field>
     
