--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -71,6 +71,12 @@
             <app-privacy-settings></app-privacy-settings>
           </div>
         </mat-tab>
+
+        <mat-tab label="Logs">
+          <div class="tab-content">
+            <app-logs-settings></app-logs-settings>
+          </div>
+        </mat-tab>
       </mat-tab-group>
     </mat-card-content>
   </mat-card>
