feat(notifications): implement notifications feature with UI and logic for fetching, displaying, and managing notifications

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,7 +58,7 @@
         <span>Reset All Data (Wipe)</span>
       </button>
       <mat-divider></mat-divider>
-      <button mat-menu-item [routerLink]="['/settings', 'notifications']">
+      <button mat-menu-item routerLink="/notifications">
         <mat-icon>settings</mat-icon>
         <span>Notification Settings</span>
       </button>
